--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 body {
   min-height: 100vh;
 }
+
+.btn_start_recipe {
+  position: fixed;
+  bottom: 0px;
+}
+
+.carouselLink {
+  /* --padding-right: 190px; */
+  max-width: 190px;
+}
+
+.search_img {
+  max-width: 190px;
+}
