--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: rgba(65, 25, 127, 1);
+  background-color: rgb(65, 25, 127);
   bottom: 0;
   display: flex;
   height: 3.25em;
